Complete the syntax highlighting and add basic functionality

--- a/index.html
+++ b/index.html
@@ -17,8 +17,19 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <p>Hello world!</p>
+
+    <header role="banner">
+      <h1>Grapse</h1>
+
+      <a href="https://github.com/roperzh/grapse"><i class="icon-github"></i></a>
+    </header>
+
+    <div id="editor">\" lorem ipsum
+
+.TH dolor ist
+amet</div>
+
+    <div id="result"></div>
 
     <script src="assets/build/js/scripts.js"></script>
 
