--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <header role="banner">
-      <h1 class="banner-title">Grapse</h1>
+      <h1 class="banner-title">.\" Grapse</h1>
 
       <a href="https://github.com/roperzh/grapse"><i class="icon-github"></i></a>
     </header>
