--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <section class="code-box">
 <h3 class="code-box-header">Code</h3>
-<section id="editor">.\"Modified from man(1) of FreeBSD, the NetBSD mdoc.template, and mdoc.samples.
+<section id="editor" data-behavior="live-editor">.\"Modified from man(1) of FreeBSD, the NetBSD mdoc.template, and mdoc.samples.
 .\"See Also:
 .\"man mdoc.samples for a complete listing of options
 .\"man mdoc for the short list of editing options
@@ -133,7 +133,7 @@ FILE_2 description
 
 <section class="code-box">
   <h3 class="code-box-header">Preview</h3>
-  <section id="result">
+  <section id="result" class="groff-output" data-behavior="live-preview">
 
   </section>
 </section>
